# simsapa-ng

./: .gitignore  AGENTS.md  BUILD_FIX_SUMMARY.md  CMakeLists.txt  EDGE_CASE_FIXED.md  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE.txt  Makefile  PROJECT_MAP.md  README.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_BUILD_ISSUE_RC_EXE.md  WINDOWS_QUICK_START.md  appimage.conf  build-appimage.sh  build-macos.sh  build-windows-with-vsenv.ps1  build-windows.bat  build-windows.ps1  entitlements.plist  jest.config.js  package-lock.json  package.json  simsapa-installer.iss  simsapa.desktop  webpack.config.js
backend/: Cargo.toml  Makefile  diesel.toml  dn22_en_thanissaro.main.html
backend/examples/: dbg_flac.rs
backend/migrations/2025-03-18-165332_create_tables/: down.sql  up.sql
backend/src/: anki_export.rs  anki_sample_data.rs  app_data.rs  app_settings.rs  asset_helpers.rs  db.rs  dict_index_reconcile.rs  dictionary_manager_core.rs  dir_list.rs  document_metadata.rs  epub_import.rs  export_helpers.rs  global_hotkeys.rs  helpers.rs  highlight.rs  html_content.rs  html_format.rs  html_import.rs  lib.rs  logger.rs  lookup.rs  models.rs  models_appdata.rs  models_dictionaries.rs  models_dpd.rs  pali_sort.rs  pali_stemmer.rs  pdf_import.rs  prompt_utils.rs  pts_reference_search.rs  query_task.rs  schema.rs  schema_appdata.rs  schema_dictionaries.rs  stardict_parse.rs  theme_colors.rs  theme_colors_dark.json  theme_colors_light.json  topic_index.rs  types.rs  (+2 more)
backend/src/audio/: format.rs  mod.rs  player.rs  recorder.rs
backend/src/db/: appdata.rs  appdata_models.rs  appdata_schema.rs  chanting_export.rs  dictionaries.rs  dictionaries_models.rs  dictionaries_schema.rs  dpd.rs  dpd_models.rs  dpd_schema.rs  mod.rs
backend/src/search/: indexer.rs  mod.rs  schema.rs  searcher.rs  tokenizer.rs  types.rs
backend/src/snowball/: mod.rs  snowball_env.rs
backend/tests/: dict_modes_filtering.rs  extract_pts_references.py  query_task_tests.rs  stardict_import_per_chunk_commit.rs  stardict_import_resources.rs  test_anki_export.rs  test_audio_player.rs  test_audio_recorder.rs  test_bold_definitions_highlighting.rs  test_bookmark_crud.rs  test_cascade_delete.rs  test_chanting_crud.rs  test_chanting_import.rs  test_contains_multi_snippet.rs  test_custom_metadata.rs  test_database_comparison.rs  test_debug_position_tracking.rs  test_dictionary_import_dir.rs  test_dpd_deconstructor_list.rs  test_dpd_lookup.rs  test_dppn_render.rs  test_epub_import.rs  test_extract_words_with_context.rs  test_fulltext_search_results.rs  test_gloss_compound_dedup.rs  test_health_counts.rs  test_highlight_pipeline.rs  test_pagination_invariants.rs  test_pdf_import.rs  test_portable_path_resolution.rs  test_pts_reference_search.rs  test_query_task.rs  test_render_sutta_content.rs  test_resolve_word_uid.rs  test_sandhi_debug.rs  test_sandhi_split_detection.rs  test_search.rs  test_search_filter_pagination.rs  test_search_normalization.rs  test_sentence_boundaries.rs  (+7 more)
backend/tests/data/: BuddhistMonasticCode_251013.epub  addhanam-agata.json  anabhijanam-words-with-context.json  anasavanca-vo.json  anumattesu-vajjesu.json  dassanaya.json  dhp290-305_en_sujato_rendered.html  dhp290-305_en_sujato_sutta.json  dhp290-305_pli_ms_rendered.html  dhp290-305_pli_ms_sutta.json  dhp290-305_pli_ms_sutta_variant.json  dn22_en_sujato_rendered.html  dn22_en_sujato_sutta.json  dn22_en_thanissaro.html  dn22_en_thanissaro.main.html  dn22_en_thanissaro_minimal.html  dn22_en_thanissaro_short.html  dn22_pli_ms_rendered.html  dn22_pli_ms_sutta.json  dn22_pli_ms_sutta_variant.json  dpd_lookup.json  evametam-dharayami.json  fulltext_search_so_ce_evam_vadeyya.json  gataddhino.json  idha-nandati.json  its-essential-meaning.epub  kilamittha.json  migabandhake.json  mn1_en_sujato_rendered.html  mn1_en_sujato_sutta.json  mn1_pli_ms_rendered.html  mn1_pli_ms_sutta.json  mn1_pli_ms_sutta_variant.json  parens-48.10-katamanca-bhikkhave.json  pli-tv-bu-vb-pj4_en_brahmali_rendered.html  pli-tv-bu-vb-pj4_en_brahmali_sutta.json  pli-tv-bu-vb-pj4_pli_ms_rendered.html  pli-tv-bu-vb-pj4_pli_ms_sutta.json  pli-tv-bu-vb-pj4_pli_ms_sutta_variant.json  pli-tv-kd9_en_brahmali_rendered.html  (+26 more)
backend/tests/helpers/: mod.rs
bridges/: Cargo.toml  build.rs
bridges/src/: api.rs  asset_manager.rs  audio_manager.rs  clipboard_manager.rs  dictionary_manager.rs  global_hotkey_manager.rs  lib.rs  prompt_manager.rs  storage_manager.rs  sutta_bridge.rs
cli/: Cargo.toml  xml-parsing-checks.sh
cli/assets/: adjust-fragments.tsv  cst-vs-sc.tsv
cli/src/: bootstrap.rs  bootstrap_old.rs  main.rs  update_provider_models.rs  update_releases_fallback.rs
cli/src/bootstrap/: appdata.rs  buddha_ujja.rs  chanting_practice.rs  completions.rs  dhammapada_munindo.rs  dhammapada_tipitaka.rs  dhammatalks_org.rs  dpd.rs  dppn.rs  helpers.rs  library_imports.rs  mod.rs  nyanadipa.rs  parse_cips_index.rs  suttacentral.rs  tipitaka_xml.rs  tipitaka_xml_tsv.rs
cli/src/tipitaka_xml_parser/: database_inserter.rs  encoding.rs  fragment_exporter.rs  fragment_parser.rs  fragment_reconstructor.rs  fragments_models.rs  fragments_schema.rs  html_transformer.rs  integration.rs  mod.rs  nikaya_detector.rs  nikaya_structure.rs  sutta_builder.rs  test_tsv_validation.rs  types.rs  uid_generator.rs  xml_parser.rs
cli/src/tipitaka_xml_parser_tsv/: database_inserter.rs  html_transformer.rs  integration.rs  mod.rs  types.rs  uid_generator.rs  xml_parser.rs
cli/tests/: test_fragment_validation.rs  test_xml_fragment_position_tracking.rs
cli/tests/data/: s0101a.att.xml  s0101m.mul.xml  s0101t.utf8.tik.xml  s0201a.utf8.att.xml  s0201m.utf8.mul.xml  s0201t.utf8.tik.xml  s0301a.att.xml  s0301m.mul.xml  s0301t.tik.xml  s0402a.att.xml  s0402m2.mul.xml  s0402t.tik.xml  sample-cips-index.csv  sample-cips-output.json
cli/tests/data/nyanadipa/: snp4.10.html
rust/: Cargo.toml  build.rs  diesel.toml
rust/migrations/2025-03-18-165332_create_tables/: up.sql
rust/src/: api.rs  app_signals.rs  db.rs  dir_list.rs  lib.rs  models.rs  schema.rs  sutta_bridge.rs
(+527 files in other folders)
