[package]
name = "simsapa_backend"
version = "0.1.0"
edition = "2024"
authors = ["Gambhiro Bhikkhu <profound.labs@gmail.com>"]
license = "GPLv3"

[lib]
name = "simsapa_backend"
path = "src/lib.rs"
doctest = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
libsqlite3-sys = { version = "*", features = ["bundled"] }
diesel = { version = "2.2.10", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35", "64-column-tables"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tinytemplate = "1.2.1"
walkdir = "2.5.0"
time = { version = "0.3.41", features = ["local-offset", "formatting", "macros"] }
app_dirs = { package = "app_dirs2", version = "2.5" }
anyhow = "1.0"
thiserror = "2.0"
stardict = { version = "0.2.2", features = ["sqlite"] }
lazy_static = "1.5.0"
html-escape = "0.2.13"
parking_lot = "0.12.3"
cfg-if = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
log = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
colored = "3.0"

[dev-dependencies]
serial_test = "3.0"
