[package]
name = "simsapa_bridges"
version = "0.1.5"
edition = "2024"
authors = ["Gambhiro Bhikkhu <profound.labs@gmail.com>"]
license = "GPLv3"

# This will instruct Cargo to create a static
# library which CMake can link against
[lib]
name = "simsapa_bridges"
path = "src/lib.rs"
# staticlib for cmake cargo
# rlib for api_bin
crate-type = ["staticlib", "rlib"]

[dependencies]
simsapa_backend = { path = "../backend" }
cxx = "1.0.148"
cxx-qt = { git = "https://github.com/simsapa/cxx-qt.git", branch = "simsapa" }
cxx-qt-lib = { git = "https://github.com/simsapa/cxx-qt.git", branch = "simsapa", features = ["full"] }
qt-build-utils = { git = "https://github.com/simsapa/cxx-qt.git", branch = "simsapa" }
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.3.1"
ureq = "3.0.10"
include_dir = "0.7.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tar = "0.4.44"
bzip2 = "0.6.0"
regex = "1.0"
lazy_static = "1.5.0"
rig-core = { version = "0.19.0", default-features = false, features = ["reqwest-rustls"] }
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { git = "https://github.com/simsapa/cxx-qt.git", branch = "simsapa", features = ["link_qt_object_files"] }
