[package]
name = "simsapa_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
simsapa_backend = { path = "../backend" }
clap = { version = "4.5.37", features = ["derive", "env"] }
dotenvy = "0.15.7"
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.10", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
arangors = "0.6.0"
scraper = "0.21.0"
html5ever = "0.29.0"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
