[package]
name = "simsapa_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simsapa_cli"
path = "src/main.rs"

[dependencies]
simsapa_backend = { path = "../backend" }
tipitaka_xml_parser = { path = "../../tipitaka-xml-parser" }
clap = { version = "4.5.37", features = ["derive", "env"] }
dotenvy = "0.15.7"
anyhow = "1.0"
thiserror = "2.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.10", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
indexmap = { version = "2.0", features = ["serde"] }
arangors = "0.6.0"
scraper = "0.21.0"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
regex = "1.11"
lazy_static = "1.5"
pulldown-cmark = { version = "0.12", features = ["html"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
quick-xml = "0.31"
html-escape = "0.2"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
