[package]
name = "simsapa_lib"
version = "0.1.0"
edition = "2024"
authors = ["Gambhiro Bhikkhu <profound.labs@gmail.com>"]
license = "GPLv3"

# This will instruct Cargo to create a static
# library which CMake can link against
[lib]
name = "simsapa_lib"
path = "src/lib.rs"
# staticlib for cmake cargo
# rlib for api_bin
crate-type = ["staticlib", "rlib"]

[dependencies]
chrono = "0.4.40"
cxx = "1.0.148"
cxx-qt = { git = "https://github.com/simsapa/cxx-qt.git", branch = "no-zstd" }
qt-build-utils = { git = "https://github.com/simsapa/cxx-qt.git", branch = "no-zstd" }
cxx-qt-lib = { git = "https://github.com/simsapa/cxx-qt.git", branch = "no-zstd", features = ["full"] }
libsqlite3-sys = { version = "0.31", features = ["bundled"] }
diesel = { version = "2.2.8", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
rocket = "0.5.1"
rocket_cors = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.2.1"
ureq = "3.0.10"
walkdir = "2.5.0"
time = { version = "0.3.41", features = ["local-offset", "formatting", "macros"] }
include_dir = "0.7.4"
http = "1.3.1"

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { git = "https://github.com/simsapa/cxx-qt.git", branch = "no-zstd", features = ["link_qt_object_files"] }
